--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, Kotlin/JS!</title>
+    <title>Ling's favorite recipes!</title>
 </head>
 <body>
     <div id="root"></div>
