--- a/src/commonMain/resources/index.html
+++ b/src/commonMain/resources/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Full Stack Shopping List</title>
+    <title>Ling's favorite recipes!</title>
 </head>
 <body>
 <div id="root"></div>
-<script src="shoppinglist.js"></script>
+<script src="recipeapp.js"></script>
 </body>
 </html>
